Added preview feature

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
 		<meta charset="utf-8">
 		<title>Tetris by Lukas Fend</title>
 		<style>
+			@font-face {
+				font-family: 'ArcadeClassic';
+				src: url('ArcadeClassic.ttf') format('truetype');
+			}  
 			body,canvas {
+				font-family: "ArcadeClassic";
 				background-color: #000000;
 				padding: 0;
 				margin: 0;
