--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 		</style>
 	</head>
 	<body>
+		<audio loop id="bgmusic" autoplay>
+			<source src="./tetris-gameboy-02.mp3" type="audio/mpeg"/>
+		</audio>
 		<canvas id="canvas"></canvas>
 		<script src="src/RenderEngine.js"></script>
 		<script src="src/Player.js"></script>
